<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>de.bb</groupId>
  <artifactId>bb</artifactId>
  <packaging>pom</packaging>
  <version>1.0.4</version>
  <!-- <name>${project.groupId}.${project.artifactId}</name> -->
  <description>All BebboSoft projects</description>
  <url>https://www.bebbosoft.de/java/</url>
  <organization>
    <name>BebboSoft</name>
    <url>https://www.bebbosoft.de/repo/${project.groupId}/${project.artifactId}</url>
  </organization>
  <repositories>
    <repository>
      <id>bebbosoft</id>
      <url>https://www.bebbosoft.de/repo</url>
      <releases>
        <updatePolicy>never</updatePolicy>
        <enabled>true</enabled>
      </releases>
    </repository>
    <repository>
      <id>maven repo1</id>
      <url>https://repo1.maven.org/maven2/</url>
      <releases>
        <updatePolicy>never</updatePolicy>
        <enabled>true</enabled>
      </releases>
    </repository>
  </repositories>
  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>
  <build>
    <finalName>${project.groupId}.${project.artifactId}-${project.version}</finalName>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-eclipse-plugin</artifactId>
          <configuration>
            <projectNameTemplate>[groupId].[artifactId]-[version]</projectNameTemplate>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <configuration>
            <source>1.8</source>
            <target>1.8</target>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-jar-plugin</artifactId>
          <version>2.3.1</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-antrun-plugin</artifactId>
          <dependencies>
            <dependency>
              <groupId>org.apache.ant</groupId>
              <artifactId>ant</artifactId>
              <version>1.8.2</version>
            </dependency>
            <dependency>
              <groupId>ant-contrib</groupId>
              <artifactId>ant-contrib</artifactId>
              <version>1.0b2</version>
            </dependency>
          </dependencies>
          <executions>
            <execution>
              <id>makeversion</id>
              <phase>clean</phase>
              <goals>
                <goal>run</goal>
              </goals>
              <configuration>
                <target>
                	<script language="javascript" classpath="${plugin_classpath}">
				var s = "src/main/java/${project.groupId}/${project.artifactId}".replaceAll("\\.", "/") + "/V.java";
				var y = new java.util.Date().getYear() + 1900;
				var f = new java.io.File(s);
				if (f.getParentFile().exists()) {
					print("writing version to: " + s);
					var out = new java.io.FileOutputStream(f);
					out.write(("package ${project.groupId}.${project.artifactId}; public interface V { public static final String V=\"${project.version}\"; public static final String Y=\"" + y + "\";}").getBytes());
					out.close();
				}
                	</script>
                	<property name="plugin_classpath" refid="maven.plugin.classpath"/>
                </target>
              </configuration>
            </execution>
          </executions>
        </plugin>
      </plugins>
    </pluginManagement>
    <resources>
      <resource>
        <!-- <id>pluginStuff</id> -->
        <directory>.</directory>
        <includes>
          <include>LICENSE</include>
          <include>plugin.xml</include>
          <include>META-INF/MANIFEST.MF</include>
        </includes>
        <excludes>
          <exclude>target</exclude>
          <exclude>target/**</exclude>
        </excludes>
      </resource>
      <resource>
        <directory>.</directory>
        <!-- <id>GPLv3</id> -->
        <includes>
          <include>COPYING</include>
        </includes>
      </resource>
      <resource>
        <!-- <id>sources</id> -->
        <directory>src/main/java</directory>
        <includes>
          <include>**</include>
        </includes>
        <targetPath>src</targetPath>
      </resource>
      <resource>
        <directory>src/main/resources</directory>
      </resource> 
    </resources>
    <testResources>
    	<testResource>
	        <directory>src/test/resources</directory>
    	</testResource>
    	<testResource>
	        <directory>src/test/java</directory>
	        <targetPath>src</targetPath>
    	</testResource>
    </testResources>
    <plugins>
      <plugin>
        <artifactId>maven-jar-plugin</artifactId>
        <configuration>
          <useDefaultManifestFile>true</useDefaultManifestFile>
        </configuration>
      </plugin>
    </plugins>
  </build>
  <dependencies>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.5</version>
      <scope>test</scope>
    </dependency>
  </dependencies>
  <modules>
    <module>log</module>
    <module>tools</module>
    <module>util</module>
    <module>io</module>
    <module>security</module>
    <module>bejy</module>
    <module>jsp</module>
    <module>sql</module>
    <module>bex2</module>
    <module>product</module>
    <module>security_tools</module>
    <module>jcc</module>
    <module>swing</module>
    <module>eclipse</module>
    <module>ws</module>
    <module>web</module>
    <module>bwt</module>
    <module>benchmark</module>
    <module>mejb</module>
    <module>rmi</module>
    <module>jpa</module>
  </modules>
  <distributionManagement>
    <repository>
      <id>bebbosoft-m2-repository</id>
      <url>scpexe://bejy.net/home/bebbo/htdocs/www.bebbosoft.de/repo</url>
    </repository>
  </distributionManagement>
</project>
